import ( // OMIT
	"golang.org/x/net/context" // OMIT
	"google.golang.org/grpc"   // OMIT
) // OMIT

type GreeterServer interface {
	// SayHello greets the user.
	SayHello(context.Context, *HelloRequest) (*HelloReply, error)
}

type GreeterClient interface {
	SayHello(ctx context.Context, in *HelloRequest, opts ...grpc.CallOption) (*HelloReply, error)
}

type HelloRequest struct {
	Name string
}

type HelloReply struct {
	Message string
}
